[package]
name = "ssd1306-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-futures = { path = "../embassy/embassy-futures", features = [] }
embassy-sync = { path = "../embassy/embassy-sync", features = [] }
embassy-time = { path = "../embassy/embassy-time", features = [] }
embedded-graphics = { git = "https://github.com/naokiiwakami/embedded-graphics.git", tag = "embedded-graphics-v0.8.2-fork" }
panic-probe = { version = "1.0.0", features = [] }
embedded-hal-async = "1.0.0"
