[package]
name = "ssd1306-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-futures = "0.1.2"
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-graphics = { git = "https://github.com/naokiiwakami/embedded-graphics.git", tag = "embedded-graphics-v0.8.2-fork" }
panic-probe = { version = "1.0.0", features = [] }
embedded-hal-async = "1.0.0"
